meged from user to addresses
